src/CAPI/CAPI_Solution.pas


//------------------------------------------------------------------------------
procedure Solution_Get_IncMatrix(var ResultPtr: PInteger; ResultCount: PAPISize); CDECL;
var
    Result: PIntegerArray0;
    i,
    Counter,
    IMIdx,
    ArrSize: Integer;
    IncMat: Tsparse_matrix;
begin
    if (not InvalidCircuit(DSSPrime)) and (DSSPrime.ActiveCircuit.Solution.IncMat <> NIL) then
    begin
        IncMat := DSSPrime.ActiveCircuit.Solution.IncMat;
        ArrSize := IncMat.NZero * 3;
        Result := DSS_RecreateArray_PInteger(ResultPtr, ResultCount, ArrSize + 1); // TODO: remove +1? Left for compatibility with the official version
        Counter := 0;
        IMIdx := 0;
        while IMIdx < ArrSize do
        begin
            for i := 0 to 2 do
            begin
                Result[IMIdx] := IncMat.data[Counter][i];
                inc(IMIdx)
            end;
            inc(Counter)
        end;
        Exit;
    end;
    DefaultResult(ResultPtr, ResultCount);
end;

procedure Solution_Get_IncMatrix_GR(); CDECL;
// Same as Solution_Get_IncMatrix but uses global result (GR) pointers
begin
    Solution_Get_IncMatrix(DSSPrime.GR_DataPtr_PInteger, @DSSPrime.GR_Counts_PInteger[0])
end;

//------------------------------------------------------------------------------
procedure Solution_Get_BusLevels(var ResultPtr: PInteger; ResultCount: PAPISize); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
        
    DSS_RecreateArray_PInteger(ResultPtr, ResultCount, length(DSSPrime.ActiveCircuit.Solution.Inc_Mat_Levels));
    Move(DSSPrime.ActiveCircuit.Solution.Inc_Mat_levels[0], ResultPtr^, ResultCount^ * SizeOf(Integer));
end;

procedure Solution_Get_BusLevels_GR(); CDECL;
// Same as Solution_Get_BusLevels but uses global result (GR) pointers
begin
    Solution_Get_BusLevels(DSSPrime.GR_DataPtr_PInteger, @DSSPrime.GR_Counts_PInteger[0])
end;

//------------------------------------------------------------------------------
procedure Solution_Get_IncMatrixRows(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
    Result: PPAnsiCharArray0;
    IMIdx,
    ArrSize: Integer;
begin
    if InvalidCircuit(DSSPrime) or (DSSPrime.ActiveCircuit.Solution.Inc_Mat_Rows = NIL) then
    begin
        DefaultResult(ResultPtr, ResultCount, '');
        Exit;
    end;
    ArrSize := length(DSSPrime.ActiveCircuit.Solution.Inc_Mat_Rows);
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, ArrSize);
    for IMIdx := 0 to (ArrSize - 1) do
    begin
        Result[IMIdx] := DSS_CopyStringAsPChar(DSSPrime.ActiveCircuit.Solution.Inc_Mat_Rows[IMIdx]);
    end;
end;

procedure Solution_Get_IncMatrixRows_GR(); CDECL;
// Same as Solution_Get_IncMatrixRows but uses global result (GR) pointers
begin
    Solution_Get_IncMatrixRows(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0])
end;

//------------------------------------------------------------------------------
procedure Solution_Get_IncMatrixCols(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
    Result: PPAnsiCharArray0;
    i,
    IMIdx,
    ArrSize: Integer;
begin
    if InvalidCircuit(DSSPrime) then
    begin
        DefaultResult(ResultPtr, ResultCount, '');
        Exit;
    end;
    if DSSPrime.IncMat_Ordered then
    begin
        if DSSPrime.ActiveCircuit.Solution.Inc_Mat_Cols = NIL then
        begin
            DefaultResult(ResultPtr, ResultCount, '');
            Exit;
        end;
            
        ArrSize := length(DSSPrime.ActiveCircuit.Solution.Inc_Mat_Cols);
        Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, ArrSize);
        for IMIdx := 0 to (ArrSize - 1) do
        begin
            Result[IMIdx] := DSS_CopyStringAsPChar(DSSPrime.ActiveCircuit.Solution.Inc_Mat_Cols[IMIdx]);
        end;
    end
    else
    begin
        if DSSPrime.ActiveCircuit.NumBuses = 0 then
        begin
            DefaultResult(ResultPtr, ResultCount, '');
            Exit;
        end;

        Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, DSSPrime.ActiveCircuit.NumBuses);
        for i := 0 to DSSPrime.ActiveCircuit.NumBuses - 1 do
        begin
            Result[i] := DSS_CopyStringAsPChar(DSSPrime.ActiveCircuit.BusList.NameOfIndex(i + 1));
        end;
    end;
end;

procedure Solution_Get_IncMatrixCols_GR(); CDECL;
// Same as Solution_Get_IncMatrixCols but uses global result (GR) pointers
begin
    Solution_Get_IncMatrixCols(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0])
end;

//------------------------------------------------------------------------------
end.
